@@ -26,6 +26,7 @@ lib/Log/Log4perl/Layout/PatternLayout.pm
 lib/Log/Log4perl/Layout/SimpleLayout.pm
 lib/Log/Log4perl/Level.pm
 lib/Log/Log4perl/Logger.pm
+lib/Log/Log4perl/NDC.pm
 lib/Log/Log4perl/TestBuffer.pm
 t/001Level.t
 t/002Logger.t
@@ -56,6 +57,7 @@ t/027Watch2.t
 t/028Additivity.t
 t/029SysWide.t
 t/030LDLevel.t
+t/031NDC.t
 t/deeper1.expected
 t/deeper6.expected
 t/deeper7.expected
