@@ -51,7 +51,7 @@ Log::Log4perl->init(\ <<EOT);
 log4j.rootLogger=DEBUG, A1
 log4j.appender.A1=Log::Log4perl::TestBuffer
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %X - %m%n
 EOT
 
 $logger = Log::Log4perl->get_logger("foo");
@@ -70,7 +70,7 @@ my %hash = (
     "log4j.appender.A1"        => "Log::Log4perl::TestBuffer",
     "log4j.appender.A1.layout" => "org.apache.log4j.PatternLayout",
     "log4j.appender.A1.layout.ConversionPattern" => 
-                                  "%-4r [%t] %-5p %c %x - %m%n"
+                                  "%-4r [%t] %-5p %c %X - %m%n"
     );
 
 Log::Log4perl->init(\%hash);
